k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: custom-logging
  labels:
    istio-injection: enabled
