k8s/02-custom-app-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: custom-app-pod-test
  namespace: custom-logging
  labels:
    app: custom-app-test
spec:
  containers:
    - name: custom-app
      image: custom-app:1.0
      imagePullPolicy: IfNotPresent
      ports:
        - containerPort: 8080
          name: http
      volumeMounts:
        - name: app-logs
          mountPath: /app/logs
        - name: app-config
          mountPath: /app/config
          readOnly: true
      readinessProbe:
        httpGet:
          path: /status
          port: http
        initialDelaySeconds: 3
        periodSeconds: 5
      livenessProbe:
        httpGet:
          path: /status
          port: http
        initialDelaySeconds: 10
        periodSeconds: 10
  volumes:
    - name: app-logs
      emptyDir: {}
    - name: app-config
      configMap:
        name: custom-app-config
