k8s/04-custom-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: custom-app-service
  namespace: custom-logging
  labels:
    app: custom-app
    monitoring: custom-app
spec:
  selector:
    app: custom-app
  ports:
    - name: http
      port: 80
      targetPort: http
  type: ClusterIP
